--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,13 @@ envlist = py34
 
 [testenv]
 deps =
-    -rrequirements.txt
+    -rrequirements.dev.txt
 changedir = {envtmpdir}
 setenv = 
     PYTHONPATH = {toxinidir}
 
 commands=
+     {envpython} -c "import plugin; print(plugin.__file__)"
      py.test -v \
         --durations=10 \
         --junitxml=tests.xml \
